<resources>
    <string name="app_name">KeeperBox</string>
    <string name="usuario">Usuario</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="contrasena">Contraseña</string>
    <string name="tipo_usuario">Tipo de usuario</string>
    <string name="propietario_buzon">Propietario de un buzón</string>
    <string name="repartidor">Repartidor</string>
    <string name="id_buzon">ID del buzón</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="pais">País</string>
    <string name="ciudad">Ciudad</string>
    <string name="calle">Calle</string>
    <string name="num_portal">Número del portal</string>
    <string name="letra_piso">Letra del piso</string>
    <string name="cod_postal">Código postal</string>
    <string name="num_piso">Número del piso</string>
    <string name="cif_empresa">CIF de la empresa</string>
    <string name="nombre_empresa">Nombre de la empresa</string>
    <string name="num_rapartidor">Número de repartidor</string>
    <string name="registrar">Registrar</string>
    <string name="vacio">Este campo no puede estar vacío</string>
    <string name="tamano">Tiene que tener entre 4 y 20 caracteres</string>
    <string name="tamano1">Máximo 50 caracteres</string>
    <string name="correo_mal">Correo mal formado (@)</string>
    <string name="tamano_erroneo">Campo demasiado grande</string>
    <string name="ser_numeros">Este campo solo puede ser numerico</string>
    <string name="solicitudesPendientes">Soclicitudes pendientes</string>
    <string name="usuariospermitidos">Usuarios permitidos</string>
    <string name="usuariosregistrados">Usuarios registrados</string>
    <string name="historialacceso">Historial de acceso</string>
    <string name="registrar_nuevousuario">Registrar nuevo usuario</string>
    <string name="alertas">Alertas</string>
    <string name="ajustes">Ajustes</string>
    <string name="accept">Aceptar</string>
    <string name="reject">Rechazar</string>
    <string name="buscar">Buscar</string>
    <string name="nombre_propietario">Nombre del propietario</string>
    <string name="apellidos_propietario">Apellidos del propietario</string>
    <string name="localizador_propietario">Localizador del buzón del propietario</string>
    <string name="solicitud_acceso">Solicitud de acceso</string>
    <string name="listar_solicitudes">Lista de solicitudes</string>
    <string name="solicitudes_aceptadas">Solicitudes aceptadas</string>
    <string name="solicitudes_pendientes">Solicitudes pendientes</string>
    <string name="solicitudes_rechazadas">Solicitudes rechazadas</string>
    <string name="mapa_rutas">Mapa de rutas</string>
    <string name="error_registro_local_erroneo">Error a la hora de registrarse. Localizador erróneo</string>
    <string name="activar_nfc">"Por favor active NFC y presione la tecla atrás para volver a la aplicación"</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="lastweek">Ult. Semana</string>
    <string name="lastmonth">Ult. Mes</string>
    <string name="idioma">Idioma</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="localizador">Número de localizador</string>
    <string name="ingles">Inglés</string>
    <string name="gallego">Gallego</string>
    <string name="castellano">Castellano</string>
    <string name="elige_idioma">Elige el idioma de la aplicación</string>
    <string name="advertencia">Advertencia</string>
    <string name="mensaje_cierre_sesion">¿Seguro que desea cerrar su sesión?</string>
    <string name="cancelar">Cancelar</string>
    <string name="continuar">Continuar</string>
    <string name="mensaje_localizador">El localizador de su buzón es: </string>
    <string name="cabecera_localizador">Localizador</string>
</resources>
