<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="500dp"
        android:layout_height="80dp"
        app:srcCompat="@drawable/keeperbox"
        android:contentDescription=""
        tools:ignore="ContentDescription"
        android:layout_alignParentStart="true" />

    <ScrollView
        android:id="@+id/scroll_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView2">

        <LinearLayout
            android:id="@+id/layout_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />


            <EditText
                android:id="@+id/usuario"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="37dp"
                android:layout_marginRight="37dp"
                android:layout_marginTop="15dp"
                android:hint="@string/usuario"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/correo_electronico"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="37dp"
                android:layout_marginRight="37dp"
                android:layout_marginTop="15dp"
                android:hint="@string/correo_electronico"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/reg_contrasena"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="37dp"
                android:layout_marginRight="37dp"
                android:layout_marginTop="15dp"
                android:hint="@string/contrasena"
                android:textSize="14sp"
                android:inputType="textPassword"/>

            <Spinner
                android:id="@+id/tipo_usuario"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="37dp"
                android:layout_marginRight="37dp"
                android:layout_marginTop="15dp"
                android:prompt="@string/tipo_usuario"
                android:spinnerMode="dropdown" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/id_buzon"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="37dp"
                    android:layout_marginRight="37dp"
                    android:layout_marginTop="15dp"
                    android:hint="@string/id_buzon"
                    android:textSize="14sp"
                    android:inputType="textPassword"
                    android:visibility="invisible" />

                <EditText
                    android:id="@+id/cif_empresa"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="37dp"
                    android:layout_marginRight="37dp"
                    android:layout_marginTop="15dp"
                    android:hint="@string/cif_empresa"
                    android:textSize="14sp"
                    android:visibility="invisible" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/nombre"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="37dp"
                    android:layout_marginRight="37dp"
                    android:layout_marginTop="15dp"
                    android:hint="@string/nombre"
                    android:textSize="14sp"
                    android:visibility="invisible" />

                <EditText
                    android:id="@+id/nombre_empresa"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="37dp"
                    android:layout_marginRight="37dp"
                    android:layout_marginTop="15dp"
                    android:hint="@string/nombre_empresa"
                    android:textSize="14sp"
                    android:visibility="invisible" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/apellidos"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="37dp"
                    android:layout_marginRight="37dp"
                    android:layout_marginTop="15dp"
                    android:hint="@string/apellidos"
                    android:textSize="14sp"
                    android:visibility="invisible" />

                <EditText
                    android:id="@+id/num_repartidor"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="37dp"
                    android:layout_marginRight="37dp"
                    android:layout_marginTop="15dp"
                    android:hint="@string/num_rapartidor"
                    android:textSize="14sp"
                    android:visibility="invisible" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/pais"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="37dp"
                    android:layout_marginRight="37dp"
                    android:layout_marginTop="15dp"
                    android:hint="@string/pais"
                    android:textSize="14sp"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/btn_reg_2"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="37dp"
                    android:layout_marginRight="37dp"
                    android:layout_marginTop="15dp"
                    android:hint="@string/registrar"
                    android:textSize="14sp"
                    android:visibility="invisible" />

            </RelativeLayout>

            <EditText
                android:id="@+id/ciudad"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="37dp"
                android:layout_marginRight="37dp"
                android:layout_marginTop="15dp"
                android:hint="@string/ciudad"
                android:textSize="14sp"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/calle"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="37dp"
                android:layout_marginRight="37dp"
                android:layout_marginTop="15dp"
                android:hint="@string/calle"
                android:textSize="14sp"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/num_portal"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="37dp"
                android:layout_marginRight="37dp"
                android:layout_marginTop="15dp"
                android:hint="@string/num_portal"
                android:textSize="14sp"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/num_piso"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="37dp"
                android:layout_marginRight="37dp"
                android:layout_marginTop="15dp"
                android:hint="@string/num_piso"
                android:textSize="14sp"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/letra_piso"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="37dp"
                android:layout_marginRight="37dp"
                android:layout_marginTop="15dp"
                android:hint="@string/letra_piso"
                android:textSize="14sp"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/cod_postal"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="37dp"
                android:layout_marginRight="37dp"
                android:layout_marginTop="15dp"
                android:hint="@string/cod_postal"
                android:textSize="14sp"
                android:visibility="invisible" />

            <Button
                android:id="@+id/btn_reg_1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="37dp"
                android:layout_marginRight="37dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:hint="@string/registrar"
                android:textSize="14sp"
                android:visibility="invisible" />

        </LinearLayout>
    </ScrollView>


</RelativeLayout>